test/org/midica/testfiles/failing/soundfont-file-invalid.midica
INCLUDE inc/instruments.midica

SOUNDFONT  inc/instruments.midica

0 c /4
